Updated showcase layout

--- a/projects/devpro-component-showcase/src/app/app.component.html
+++ b/projects/devpro-component-showcase/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="min-h-screen max-h-screen h-screen overflow-hidden flex flex-col bg-gray-50">
-  <div class="flex-shrink-0">
+<div class="min-h-screen relative">
+  <div class="sticky top-0 z-20">
     <app-top-nav></app-top-nav>
   </div>
-  <div class="flex-grow container mx-auto flex overflow-hidden">
-    <div class="h-full flex-shrink-0">
+  <div class="container mx-auto flex">
+    <div>
       <app-side-nav></app-side-nav>
     </div>
     <div class="h-full overflow-auto flex-grow px-10">
