--- a/projects/devpro-component-library/src/lib/radio-button/radio-button.component.scss
+++ b/projects/devpro-component-library/src/lib/radio-button/radio-button.component.scss
@@ -1,49 +1,51 @@
+@import '../../../assets/styles/base.scss';
+
 input[type="radio"] {
   display: none;
 }
 
 :host[disabled='true'] {
-  color: rgba(75, 85, 99, 1); // Gray 600
+  color: $gray-600; // Gray 600
   outline: 2px solid transparent;
   outline-offset: 2px;
-  border-color: rgba(229, 231, 235, 1); // Gray 200
+  border-color: $gray-200; // Gray 200
   pointer-events: none;
 }
 
 :host[disabled='true'] .radio-button-label {
-    background-color: rgba(229, 231, 235, 1); // Gray 200
+    background-color: $gray-200; // Gray 200
 }
 
 :host[disabled='true'] input[type="radio"] + label .radio-button {
-  background-color: rgba(107, 114, 128, 1); // Gray 500
-  border-color: rgba(107, 114, 128, 1); // Gray 500
+  background-color: $gray-500; // Gray 500
+  border-color: $gray-500; // Gray 500
   box-shadow: 0px 0px 0px 0px white inset;
 }
 
 :host[error='true'] input[type="radio"] + label .radio-button {
-  border-color: rgba(239, 68, 68, 1); // Red 500
+  border-color: $red-500; // Red 500
 }
 
 :host[error='true'] input[type="radio"]:checked + label .radio-button {
-  background-color: rgba(239, 68, 68, 1); // Red 500
-  border-color: rgba(239, 68, 68, 1); // Red 500
+  background-color: $red-500; // Red 500
+  border-color: $red-500; // Red 500
   box-shadow: 0px 0px 0px 3px white inset;
 }
 
 .radio-button {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: $w-5;
+  height: $w-5;
   display: inline-block;
-  margin-right: 0.25rem;
-  border-radius: 9999px;
-  border-width: 2px;
-  border-color: rgba(107, 114, 128, 1); // Gray 500
+  margin-right: $m-1;
+  border-radius: $rounded-full;
+  border-width: $border-2;
+  border-color: $gray-500; // Gray 500
   transition: all ease-in-out 200ms;
 }
 
 input[type="radio"]:checked + label .radio-button {
-  background-color: rgba(59, 130, 246, 1); // Blue 500
-  border-color: rgba(59, 130, 246, 1); // Blue 500
+  background-color: $blue-500; // Blue 500
+  border-color: $blue-500; // Blue 500
   box-shadow: 0px 0px 0px 3px white inset;
 }
 
