--- a/projects/devpro-component-library/src/lib/svg-button/svg-button.component.scss
+++ b/projects/devpro-component-library/src/lib/svg-button/svg-button.component.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/styles/base.scss';
+
 :host {
   display: inline-flex;
 }
@@ -6,14 +8,14 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 1.5rem;
+  height:  $h-6;
   width: 1.5rem;
-  background-color: rgba(229, 231, 235, 1); // Gray 200
-  border-radius: 9999px;
+  background-color: $gray-200; // Gray 200
+  border-radius: $rounded-full;
   cursor: pointer;
   transition: background-color 200ms ease-in-out;
 }
 
 .svg-button-wrapper:hover {
-  background-color: rgba(209, 213, 219, 1); // Gray 300
+  background-color: $gray-300; // Gray 300
 }
