--- a/projects/devpro-component-library/src/lib/dialog/dialog-header/dialog-header.component.html
+++ b/projects/devpro-component-library/src/lib/dialog/dialog-header/dialog-header.component.html
@@ -3,6 +3,6 @@
     <ng-content></ng-content>
   </div>
   <div class="dismiss" (click)="onClose()">
-    <dp-svg iconName="times"></dp-svg>
+    <dp-svg name="times"></dp-svg>
   </div>
 </div>
