--- a/projects/devpro-component-showcase/src/app/components/demos/radio/radio-demo-basic.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/radio/radio-demo-basic.component.html
@@ -1,4 +1,4 @@
 <dp-radio-group>
-    <dp-radio-button [label]="'test'"></dp-radio-button>
-    <dp-radio-button [label]="'test2'"></dp-radio-button>
+    <dp-radio-button label="Option 1" value="0"></dp-radio-button>
+    <dp-radio-button label="Option 2" value="1"></dp-radio-button>
 </dp-radio-group>
