--- a/projects/devpro-component-library/src/lib/dialog/dialog-footer/dialog-footer.component.scss
+++ b/projects/devpro-component-library/src/lib/dialog/dialog-footer/dialog-footer.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   display: block;
-  background-color: $gray-200; // Gray 200
+  background-color: $gray-50; 
+  border-top: 1px solid $gray-200;
   padding: $p-3 $p-4;
 }
