--- a/projects/devpro-component-library/src/lib/dialog/dialog-header/dialog-header.component.scss
+++ b/projects/devpro-component-library/src/lib/dialog/dialog-header/dialog-header.component.scss
@@ -2,7 +2,8 @@
 
 :host {
   display: block;
-  background-color: $gray-200; // Gray 200
+  background-color: $gray-50;
+  border-bottom: 1px solid $gray-200;
   padding: $p-3 $p-4;
 }
 
