--- a/projects/devpro-component-library/src/lib/tab/tab-group/tab-group.component.scss
+++ b/projects/devpro-component-library/src/lib/tab/tab-group/tab-group.component.scss
@@ -2,6 +2,7 @@
 
 .tab-wrapper {
   display: flex;
+  overflow-x: auto;
   border-bottom: 2px solid $gray-200;
 
   .tab {
@@ -15,6 +16,7 @@
     border-bottom: 2px solid $transparent;
     transition: 0.15s all ease-in;
     text-align: center;
+    white-space:nowrap;
 
     &.selected {
       font-weight: $font-medium;
