--- a/projects/devpro-component-showcase/src/app/components/demos/dialog/dialog-demo.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/dialog/dialog-demo.component.html
@@ -1,3 +1,3 @@
-<app-feature-preview assetName="dialog-demo-basic" featureTitle="Dialog">
+<app-feature-preview assetName="dialog-demo-basic" optionalAssetName="dialog-demo-basic-content" featureTitle="Basic usage">
     <app-dialog-demo-basic></app-dialog-demo-basic>
 </app-feature-preview>
